--- a/elk-service/pom.xml
+++ b/elk-service/pom.xml
@@ -108,7 +108,12 @@
             <artifactId>xxl-job-core</artifactId>
             <version>2.4.2</version>
         </dependency>
-
+        <!-- elastic 服务开始 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+        <!-- elastic 服务结束 -->
     </dependencies>
 
     <build>
