--- a/service-provider/src/main/resources/bootstrap.yml
+++ b/service-provider/src/main/resources/bootstrap.yml
@@ -3,8 +3,8 @@ spring:
     name: service-provider
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://172.31.38.196:3306/seata?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-    username: seata
+    url: jdbc:mysql://172.31.38.196:3306/operation?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
     password: 123456
   cloud:
     nacos:
